--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
-  "author": "Miguel Rodríguez Bonhome",
+  "author": "Miguel Rodríguez Bonhome <contacto@mrbonhome.com> (http://mrbonhome.com)",
   "license": "ISC",
   "dependencies": {
     "react": "^17.0.2",
