--- a/package.json
+++ b/package.json
@@ -4,32 +4,46 @@
   "description": "A really simple and minimalistic React 18, Webpack 5 and Babel 7 boilerplate project.",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development",
+    "start": "webpack serve --open --hot --mode development",
     "build": "webpack --mode production"
   },
-  "author": "Miguel Rodríguez Bonhome <contacto@mrbonhome.com> (http://mrbonhome.com)",
+  "author": {
+    "name": "Miguel Rodríguez Bonhome",
+    "email": "contacto@mrbonhome.com",
+    "url": "http://mrbonhome.com"
+  },
   "license": "MIT",
   "bin": {
     "infinizhen": "./bin/start.js"
   },
   "dependencies": {
-    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.5",
-    "style-loader": "^3.3.2",
-    "webpack": "^5.87.0",
-    "webpack-cli": "^5.0.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "private": true,
+  "keywords": [
+    "react",
+    "webpack",
+    "babel",
+    "boilerplate"
+  ]
 }
