--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
