--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "infinizhen": "./bin/start.js"
   },
   "dependencies": {
+    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "fs-extra": "^11.1.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
@@ -34,7 +34,7 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   },
   "engines": {
     "node": ">=14.0.0",
