--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infinizhen/react-webpack-babel-boilerplate",
-  "version": "2.18.588.723.3",
+  "version": "2.18.588.723.8",
   "description": "A really simple and minimalistic React 18, Webpack 5 and Babel 7 boilerplate project.",
   "main": "index.js",
   "scripts": {
@@ -28,10 +28,14 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
+    "mini-css-extract-plugin": "^2.8.1",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
